--- a/admin kantor/rincian_nota.html
+++ b/admin kantor/rincian_nota.html
@@ -9,13 +9,13 @@
 	Like: www.facebook.com/keenthemes
 	Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
 	Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-	License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.-->
+	License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project. -->
 	<html lang="en" >
 	<!-- begin::Head -->
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Admin Toko | Tambah Inventory
+			Admin kantor | Rincian Nota
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,10 +47,23 @@
 			.m-datatable.m-datatable--default > .m-datatable__pager > .m-datatable__pager-info {
 				display: none !important;
 			}
-
-			.modal-dialog {
-				max-width: 600px;
+		</style>
+		<style>
+			.m-datatable.m-datatable--default > .m-datatable__pager > .m-datatable__pager-info {
+				display: none !important;
 			}
+			.tg  {border-collapse:collapse;border-spacing:0;}
+			.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+			.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:black;}
+			.tg .tg-s268{
+				text-align:center;
+				font-size: 1.2rem;
+				font-weight: 600;
+			}
+			.tlu {
+				border-top: transparent !important;
+			}
+
 		</style>
 	</head>
 	<!-- end::Head -->
@@ -99,7 +112,7 @@
 							<div class="m-stack__item m-stack__item--fluid m-header-head" id="m_header_nav">
 								<!-- BEGIN: Horizontal Menu -->
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-light m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-dark m-aside-header-menu-mobile--submenu-skin-dark "  >
-									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_toko.png">
+									<img style="display: inline; float: left; height: 60px; width: auto" src="../assets/demo/default/media/img/misc/admin_kantor.png">
 								</div>
 								<!-- END: Horizontal Menu -->								
 								<!-- BEGIN: Topbar -->
@@ -152,66 +165,99 @@
 									</span>
 								</a>
 							</li>
-							<!-- Surat jalan-->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="surat_jalan.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-transport"></i>
+							<!-- Manajemen Pelanggan -->
+							<li class="m-menu__item  " aria-haspopup="true" >
+								<a  href="manajemen_pelanggan.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa 	fa-user-circle-o"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Surat jalan
+												Manajemen	Pelanggan
 											</span>
 										</span>
 									</span>
 								</a>
 							</li>
-							<!-- Barang Masuk -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="barang_masuk.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa fa-shopping-cart"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Barang Masuk
-											</span>
-										</span>
+							<!-- Manajemen Pesanan-->
+							<li class="m-menu__item m-menu__item--submenu" aria-haspopup="true" data-menu-submenu-toggle="hover">
+								<a href="#" class="m-menu__link m-menu__toggle">
+									<i class="m-menu__link-icon flaticon-folder-2"></i>
+									<span class="m-menu__link-text">
+										Manajemen Pesanan
 									</span>
+									<i style="font-size: 1.5rem" class="m-menu__ver-arrow fa fa-caret-right"></i>
 								</a>
-							</li>
-							<!-- Pengeluaran Material -->
-							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="pengeluaran_material.html" class="m-menu__link ">
-									<i class="m-menu__link-icon la 	la-stack-overflow"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Pengeluaran Material
+								<div class="m-menu__submenu " style="">
+									<span class="m-menu__arrow"></span>
+									<ul class="m-menu__subnav">
+										<li class="m-menu__item  m-menu__item--parent" aria-haspopup="true">
+											<span class="m-menu__link">
+												<span class="m-menu__link-text">
+													Pesanan
+												</span>
 											</span>
-										</span>
-									</span>
-								</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_pemasangan.html" class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Pemasangan
+												</span>
+											</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_servis.html"  class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Servis
+												</span>
+											</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_free.html"  class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Free
+												</span>
+											</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_komplain.html"  class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Komplain
+												</span>
+											</a>
+										</li>
+										<li class="m-menu__item " aria-haspopup="true">
+											<a href="spk_survey.html"  class="m-menu__link ">
+												<i class="m-menu__link-bullet m-menu__link-bullet--dot">
+													<span></span>
+												</i>
+												<span class="m-menu__link-text">
+													SPK Survey
+												</span>
+											</a>
+										</li>
+									</ul>
+								</div>
 							</li>
-							<!-- Inventory-->
-							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
-								<a  href="inventory.html" class="m-menu__link ">
-									<i class="m-menu__link-icon fa 	fa-cube"></i>
-									<span class="m-menu__link-title">
-										<span class="m-menu__link-wrap">
-											<span class="m-menu__link-text">
-												Inventory
-											</span>
-										</span>
-									</span>
-								</a>
-							</li>
-							<!-- Stock -->
+							<!-- Manajemen Penawaran -->
 							<li class="m-menu__item" aria-haspopup="true" >
-								<a  href="stock.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-list-1"></i>
+								<a  href="manajemen_penawaran.html" class="m-menu__link ">
+									<i class="m-menu__link-icon fa 	fa-handshake-o"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Manajemen Stock
+												Manajemen Penawaran
 											</span>
 										</span>
 									</span>
@@ -220,16 +266,42 @@
 							<!-- Master Stock -->
 							<li class="m-menu__item" aria-haspopup="true" >
 								<a  href="master_stock.html" class="m-menu__link ">
-									<i class="m-menu__link-icon flaticon-open-box"></i>
+									<i class="m-menu__link-icon flaticon-list-1"></i>
 									<span class="m-menu__link-title">
 										<span class="m-menu__link-wrap">
 											<span class="m-menu__link-text">
-												Master stock
+												Master Stock
 											</span>
 										</span>
 									</span>
 								</a>
-							</li>	
+							</li>
+							<!-- Harga Item dan Jasa -->
+							<li class="m-menu__item" aria-haspopup="true" >
+								<a  href="manajemen_harga.html" class="m-menu__link ">
+									<i class="m-menu__link-icon la la-list"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												Manajemen Harga
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
+							<!-- Manajemen Pembayaran -->
+							<li class="m-menu__item m-menu__item--active" aria-haspopup="true" >
+								<a  href="manajemen_pembayaran.html" class="m-menu__link ">
+									<i class="m-menu__link-icon flaticon-file-1"></i>
+									<span class="m-menu__link-title">
+										<span class="m-menu__link-wrap">
+											<span class="m-menu__link-text">
+												manajemen pembayaran
+											</span>
+										</span>
+									</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 					<!-- END: Aside Menu -->
@@ -241,7 +313,7 @@
 						<div class="d-flex align-items-center">
 							<div class="mr-auto">
 								<h3 class="m-subheader__title m-subheader__title--separator">
-									Tambah Inventory
+									Rincian Nota
 								</h3>
 								<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 									<li class="m-nav__item m-nav__item--home">
@@ -253,9 +325,9 @@
 										-
 									</li>
 									<li class="m-nav__item">
-										<a href="inventory.html" class="m-nav__link">
+										<a href="manajemen_pembayaran.html" class="m-nav__link">
 											<span class="m-nav__link-text">
-												Inventory
+												Manajemen Pembayaran
 											</span>
 										</a>
 									</li>
@@ -263,9 +335,9 @@
 										-
 									</li>
 									<li class="m-nav__item">
-										<a href="tambah_inventory.html" class="m-nav__link">
+										<a href="rincian_nota.html" class="m-nav__link">
 											<span class="m-nav__link-text">
-												Tambah
+												Rincian
 											</span>
 										</a>
 									</li>
@@ -277,61 +349,114 @@
 					<div class="m-content">
 						<div class="row">
 							<div class="col-xl-12">
-								<div class="m-portlet m-portlet--tab">
-									<div class="m-portlet__head">
-										<div class="m-portlet__head-caption">
-											<div class="m-portlet__head-title">
-												<span class="m-portlet__head-icon m--hide">
-													<i class="la la-gear"></i>
-												</span>
-												<h3 class="m-portlet__head-text">
-													Tambah Item Inventory
-												</h3>
+								<div class="m-portlet m-portlet--mobile">
+									<div class="m-portlet__head header">
+										<h2 style="margin-top: 30px" align="left" class="header-pesanan">
+											Invoice Sukses Sejuk Mandiri
+										</h2><br>
+										<div class="info row">
+											<div class="col-sm">
+												<p id="tanggal_surat">
+													<i class="flaticon-calendar-2"> </i>20/11/19
+												</p> 
+												<p id="nama_pelanggan">
+													<i class="flaticon-users"> </i> Ahmad Rifaldi
+												</p>
+												<p id="no_telpon">
+													<i class="fa fa-phone"> </i> 085-145-322-137
+												</p>
+											</div>
+											<div class="col-sm">
+												<p id="email_pelanggan"><i class="fa fa-envelope-o "> </i> aldi4rifaldi@gmail.com</p> 
+												<p id="alamat_pelanggan"><i class="flaticon-placeholder-1"> </i> Jl. Poros Malino, Griya Riski Abadi blok C6</p>
+												<p>
+													No Invoice : <span id="no_invoice">123123123</span>
+												</p>
+											</div>
+										</div>	
+									</div>
+									<div class="m-portlet__body">
+										<!--end: Search Form -->
+										<!--begin: Datatable -->
+										<!-- <div class="m_datatable" id="local_data"></div> -->
+										<table class="table" id="tbl_rincian_nota">
+											<thead>
+												<tr>
+													<th>Qty</th>
+													<th>Sat</th>
+													<th>Nama Barang</th>
+													<th>Harga</th>
+													<th>Harga Khusus</th>
+													<th>Jumlah</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>4</td>
+													<td>unit</td>
+													<td>AC Daikin 1/2 PK Thailand</td>
+													<td>31,640,000</td>
+													<td>-</td>
+													<td>126,560,000</td>
+												</tr>
+												<tr>
+													<td>3</td>
+													<td>meter</td>
+													<td>Pipa</td>
+													<td>30,000</td>
+													<td>25,000</td>
+													<td>75,000</td>
+												</tr>
+											</tbody>
+										</table>
+										<table style="width: 100%" class="tg">
+											<tr>
+												<th style="width: 10%" class="tg-s268"></th>
+												<th style="width: 10%" class="tg-s268"></th>
+												<th style="width: 20%" class="tg-s268"></th>
+												<th style="width: 20%" class="tg-s268"></th>
+												<th id="sub_total" align="right" style="width: 25%" class="tg-s268">SUB TOTAL</th>
+												<th style="width: 15%" class="tg-s268">126,635,000</th>
+											</tr>
+											<tr>
+												<th style="width: 10%" class="tg-s268"></th>
+												<th style="width: 10%" class="tg-s268"></th>
+												<th style="width: 20%" class="tg-s268"></th>
+												<th style="width: 20%" class="tg-s268"></th>
+												<th id="ppn" align="right" style="width: 25%" class="tg-s268">PPN 10%</th>
+												<th style="width: 15%" class="tg-s268">12,663,500</th>
+											</tr>
+											<tr>
+												<th style="width: 10%" class="tg-s268"></th>
+												<th style="width: 10%" class="tg-s268"></th>
+												<th style="width: 20%" class="tg-s268"></th>
+												<th style="width: 20%" class="tg-s268"></th>
+												<th id="total" align="right" style="width: 25%" class="tg-s268">TOTAL</th>
+												<th style="width: 15%" class="tg-s268">139,298,500</th>
+											</tr>
+										</table>
+										<p>Pembayaran dapat dikirmkan ke nomer rekening :</p>
+										<p style="font-size: 1.3rem" id="no_rekening_ssm">BNI 12345678</p>
+										<!--end: Datatable -->
+										<div style="margin-top: 20px" class="row">
+											<div align="center" class="col-sm">
+												<p><b>Tanda Terima</b></p>
+												<br>
+												<br>
+												<br>
+												<br>
+												<br>
+											</div>
+											<div align="center" class="col-sm">
+												<p><b>Hormat Kami</b></p>
+												<br>
+												<br>
+												<br>
+												<br>
+												<br>
 											</div>
 										</div>
 									</div>
-									<!--begin::Form-->
-									<form class="m-form m-form--fit m-form--label-align-right">
-										<div class="m-portlet__body">
-											<div class="form-group m-form__group row">
-												<label  class="col-2 col-form-label">
-													ID Barang
-												</label>
-												<div class="col-10">
-													<input class="form-control m-input" type="text" value="" id="id_barang">
-												</div>
-											</div>
-											<div class="form-group m-form__group row">
-												<label class="col-2 col-form-label">
-													Nama Barang
-												</label>
-												<div class="col-10">
-													<input class="form-control m-input" type="text" value="" id="nama_barang">
-												</div>
-											</div>
-											<div class="form-group m-form__group row">
-												<label  class="col-2 col-form-label">
-													No Seri
-												</label>
-												<div class="col-10">
-													<input class="form-control m-input" type="text" value="" id="no_seri">
-												</div>
-											</div>
-												<div class="form-group m-form__group row">
-												<label  class="col-2 col-form-label">
-													Upload Gambar
-												</label>
-												<div class="col-10">
-													<button class="btn btn-primary">
-														Upload
-													</button>
-												</div>
-											</div>
-											<div style="margin-top: 20px" align="center">
-												<button id="btn_tambah_item_inventory" type="button" class="btn btn-success btn_pemasangan">Tambah Item</button>
-											</div>
-										</div>
-									</form>
 								</div>
 							</div>
 						</div>
@@ -339,8 +464,6 @@
 				</div>
 			</div>
 			<!-- end:: Body -->
-			<!--  Begin::Modals -->
-			<!-- End::Modals -->
 			<!-- begin::Footer -->
 			<footer class="m-grid__item		m-footer ">
 				<div class="m-container m-container--fluid m-container--full-height m-page__container">
@@ -372,30 +495,79 @@
 		<!--end::Page Vendors -->  
 		<!--begin::Page Snippets -->
 		<script src="../assets/app/js/dashboard.js" type="text/javascript"></script>
+
 		<!--end::Page Snippets -->
-		<script>
-			//== Class definition
-			var SweetAlert2Demo = function() {
+		<script src="http://localhost:35729/livereload.js"></script>
+		<script type="text/javascript">
+			var tbl_list_item_masuk = $('#tbl_rincian_nota').mDatatable({
+				data: {
+					saveState: {cookie: false},
+					/*type: 'remote',
+			        source: {
+			          read: {
+			            // sample GET method
+			            method: 'GET',
+			            url: 'https://keenthemes.com/metronic/preview/inc/api/datatables/demos/default.php',
+			            map: function(raw) {
+			              // sample data mapping
+			              var dataSet = raw;
+			              if (typeof raw.data !== 'undefined') {
+			                dataSet = raw.data;
+			              }
+			              return dataSet;
+			            },
+			          },
+			        },
+			        pageSize: 10,
+			        serverPaging: true,
+			        serverFiltering: true,
+			        serverSorting: true,*/
+			    },
+				// layout definition
+				layout: {
+					theme: 'default', // datatable theme
+					class: '', // custom wrapper class
+					scroll: true, // enable/disable datatable scroll both horizontal and vertical when needed.
+					// height: 450, // datatable's body's fixed height
+					footer: false // display/hide footer
+				},
 
-			//== Demos
-			var initDemos = function() {
+				// column sorting
+				sortable: false,
+				search: {
+					input: $('#generalSearch'),
+				},
+				columns: [
 
-				$('#btn_tambah_item_inventory').click(function(e) {
-					swal("Berhasil!", "Item telah ditambahkan ke Inventory","success");
-				});
-			};
+				{
+					field: 'Qty',
+					textAlign: 'center',
+					width: 50,
+				},
+				{
+					field: 'Sat',
+					textAlign: 'center',
+					width: 50,
+				},
+				{
+					field: 'Nama Barang',
+					textAlign: 'center',
+					width: 250,
+				},
+				{
+					field: 'Jumlah',
+					textAlign: 'center',
+				},
+				{
+					field: 'Harga',
+					textAlign: 'center',
+				},
+				{
+					field: 'Harga Khusus',
+					textAlign: 'center',
+				}
 
-			return {
-					//== Init
-					init: function() {
-						initDemos();
-					},
-				};
-			}();
-
-			//== Class Initialization
-			jQuery(document).ready(function() {
-				SweetAlert2Demo.init();
+				],
 			});
 		</script>
 	</body>
